# marketplace

./: CLAUDE.md  LICENSE  README.md
.claude-plugin/: marketplace.json
docs/superpowers/plans/: 2026-05-25-k6-performance-plugin.md
docs/superpowers/specs/: 2026-05-25-k6-performance-plugin-design.md
plugins/agentic-playwright-automation/: CHANGELOG.md  README.md
plugins/agentic-playwright-automation/.claude-plugin/: plugin.json
plugins/agentic-playwright-automation/commands/: convert-bdd-to-playwright.md  generate-playwright-suite.md  generate-playwright-test.md  investigate-playwright-failure.md  review-playwright-test.md  setup-playwright-framework.md
plugins/astro-content-site/.claude-plugin/: plugin.json
plugins/business-requirements/: CHANGELOG.md  README.md
plugins/business-requirements/.claude-plugin/: plugin.json
plugins/business-requirements/agents/: business-analyst.md
plugins/business-requirements/commands/: brd.md
plugins/exploratory-to-bdd/: CHANGELOG.md  README.md
plugins/logical-consistency/: CHANGELOG.md  README.md
plugins/mcp-exploratory-testing/: CHANGELOG.md  README.md
plugins/web-scaffold/: CHANGELOG.md  LICENSE  README.md  TODO.md
plugins/web-scaffold/skills/create-website/templates/backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
plugins/web-scaffold/skills/create-website/templates/backend/src/app/: main.py  settings.py
plugins/web-scaffold/skills/create-website/templates/backend/src/app/routes/: contact.py
plugins/web-scaffold/skills/create-website/templates/backend/tests/: test_contact.py
(+128 files in other folders)
